--- a/index.html
+++ b/index.html
@@ -22,27 +22,27 @@
                     <!--.player*6>img[src="images/players/plyer-$.png"]+h3{top player-$}-->
                     <div class="player">
                         <img src="images/players/player-1.png" alt="">
-                        <h3>top player-1</h3>
+                        <h3>Top Player-1</h3>
                     </div>
                     <div class="player">
                         <img src="images/players/player-2.png" alt="">
-                        <h3>to player-2</h3>
+                        <h3>To Player-2</h3>
                     </div>
                     <div class="player">
                         <img src="images/players/player-3.png" alt="">
-                        <h3>top player-3</h3>
+                        <h3>Top Player-3</h3>
                     </div>
                     <div class="player">
                         <img src="images/players/player-4.png" alt="">
-                        <h3>top player-4</h3>
+                        <h3>Top Player-4</h3>
                     </div>
                     <div class="player">
                         <img src="images/players/player-5.png" alt="">
-                        <h3>top player-5</h3>
+                        <h3>Top Player-5</h3>
                     </div>
                     <div class="player">
                         <img src="images/players/player-6.png" alt="">
-                        <h3>top player-6</h3>
+                        <h3>Top Player-6</h3>
                     </div>
                 </div>
             </div>
