--- a/index.html
+++ b/index.html
@@ -16,36 +16,38 @@
     <!-- header end -->
     <main>
         <!--top players and top blogs-->
-        <section>
+        <section class="container">
             <div class="top-players">
+                <h2 class="section-title">To Plyers</h2>
                 <div class="players">
                     <!--.player*6>img[src="images/players/plyer-$.png"]+h3{top player-$}-->
                     <div class="player">
                         <img src="images/players/player-1.png" alt="">
-                        <h3>Top Player-1</h3>
+                        <h3 class="player-name">Top Player-1</h3>
                     </div>
                     <div class="player">
                         <img src="images/players/player-2.png" alt="">
-                        <h3>To Player-2</h3>
+                        <h3 class="player-name">To Player-2</h3>
                     </div>
                     <div class="player">
                         <img src="images/players/player-3.png" alt="">
-                        <h3>Top Player-3</h3>
+                        <h3 class="player-name">Top Player-3</h3>
                     </div>
                     <div class="player">
                         <img src="images/players/player-4.png" alt="">
-                        <h3>Top Player-4</h3>
+                        <h3 class="player-name">Top Player-4</h3>
                     </div>
                     <div class="player">
                         <img src="images/players/player-5.png" alt="">
-                        <h3>Top Player-5</h3>
+                        <h3 class="player-name">Top Player-5</h3>
                     </div>
                     <div class="player">
                         <img src="images/players/player-6.png" alt="">
-                        <h3>Top Player-6</h3>
+                        <h3 class="player-name">Top Player-6</h3>
                     </div>
                 </div>
             </div>
+            <hr>
         </section>
     </main>
 </body>
