--- a/index.html
+++ b/index.html
@@ -13,7 +13,17 @@
 <body>
     <!-- header start -->
     <header>
-
+        <div class="container">
+            <a href="/" class="branding">MyBlog</a>
+            <nav>
+              <ul>
+                <li><a href="">Home</a></li>
+                <li><a href="">Blogs</a></li>
+                <li><a href="">About</a></li>
+                <li><a href="">Contact</a></li>
+              </ul>
+            </nav>
+          </div>
     </header>
     <!-- header end -->
     <main>
